Adding question pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <style>
+            body {
+                background-image: url("HomeOwnersOdessy.png");
+            }
+        </style>
+    </head>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>With Background image</p>
 </body>
 </html>
