--- a/HomeOwnersOdessy.html
+++ b/HomeOwnersOdessy.html
@@ -7,8 +7,15 @@
             }
         </style>
     </head>
+
+
+
 <body>
 <h1>Asking Questions</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>
+    <div id="q1">Yes</div>
+    <div id="q2">No</div>
+    <div id="q3" style="display: hidden;"></div>
+</p>
 </body>
 </html>
