--- a/HomeOwnersOdessy.html
+++ b/HomeOwnersOdessy.html
@@ -5,6 +5,13 @@
             body {
                 background-image: url("QuestionsBackground.png");
             }
+
+            .questions  {
+                width: 350px;
+                height: 150px;
+                background-color: yellow;
+                display: inline-block;
+            }
         </style>
     </head>
 <body>
