--- a/HomeOwnersOdessy.html
+++ b/HomeOwnersOdessy.html
@@ -17,9 +17,9 @@
 <body>
 <h1>Asking Questions</h1>
 <p>
-    <div id="q1">Yes</div>
-    <div id="q2">No</div>
-    <div id="q3" style="display: hidden;"></div>
+    <div id="q1" class="questions">Yes</div>
+    <div id="q2" class="questions">No</div>
+    <div id="q3" class="questions" style="display: hidden;"></div>
 </p>
 </body>
 </html>
