add logic and js file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
         <style>
             body {
                 background-image: url("HomeOwnersOdessy.png");
+                background-size: cover;
+                height: 100vh;
+                width: 100vw;
+                margin: 0;
+                padding: 0;
+                min-height: 100%;
+                min-width: 100%;
             }
         </style>
     </head>
 <body>
-<h1>Hello World</h1>
-<p>With Background image</p>
+<div>
+    hello
+</div>
 </body>
 </html>
